--- a/JavaScript/profesional/MediPlayer/ejercicios/herencia.html
+++ b/JavaScript/profesional/MediPlayer/ejercicios/herencia.html
@@ -27,6 +27,7 @@
         console.log("zelda.hasOwnProperty('name'): " + zelda.hasOwnProperty('name'))
         console.log("zelda.hasOwnProperty('saludar'): " + zelda.hasOwnProperty('saludar'))
 
+        console.log(Object.getPrototypeOf(zelda))
     </script>
 </body>
 </html>
