--- a/JavaScript/profesional/MediPlayer/index.html
+++ b/JavaScript/profesional/MediPlayer/index.html
@@ -24,6 +24,6 @@
       <input type="range" name="" id="volume" min="0" max="100" step="2">
     </main>
 
-    <script type="module" src="./assets/index.js"></script>
+    <script defer type="module" src="./assets/index.js"></script>
   </body>
 </html>
